# gr-opus

./: CMakeLists.txt  DUDECT_RESULTS.md  INSTALL_INSTRUCTIONS.md  LINTING_RESULTS.md  PERFORMANCE_VERIFICATION.md  README.md  install_local.sh  setup.py  test-results.md
examples/: opus_encode_decode_example.py  opus_file_example.py
grc/: CMakeLists.txt  gr_opus.tree.yml  gr_opus_opus_decoder.block.yml  gr_opus_opus_encoder.block.yml
include/gnuradio/gr_opus/: api.h  opus_decoder.h  opus_encoder.h
lib/: CMakeLists.txt  opus_decoder_impl.cc  opus_decoder_impl.h  opus_encoder_impl.cc  opus_encoder_impl.h
python/: __init__.py  opus_decoder.py  opus_encoder.py
swig/: CMakeLists.txt  gnuradio.i  gr_opus_swig.i
tests/: README.md  __init__.py  qa_opus_decoder.py  qa_opus_dudect.py  qa_opus_encoder.py  qa_opus_memory_sanitizer.py  qa_opus_performance.py  qa_opus_roundtrip.py
